--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -7,7 +7,7 @@ body {
   font-family: var(--font-family-base);
 }
 section h1, section h2, section h3, section h4, section h5, section h6 {
-  font-family: var(--font-family-title)
+  font-family: var(--font-family-title);
 }
 a {
   color: var(--text-color);
