--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -8,8 +8,13 @@ body {
   font-family: var(--font-family-base);
   font: var(--font-size-medium);
 }
-section h1, section h2, section h3, section h4, section h5, section h6 {
-  font-family: var(--font-family-title)
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-family-title);
 }
 a {
   color: var(--text-color);
