--- a/0x02-CSS_advanced/styles/9-style.css
+++ b/0x02-CSS_advanced/styles/9-style.css
@@ -42,7 +42,7 @@ h6 {
 }
 a {
   color: var(--text-color);
-  text-decoration: noce;
+  text-decoration: none;
 }
 .visually-hidden {
   display: none;
