--- a/0x02-CSS_advanced/styles/14-style.css
+++ b/0x02-CSS_advanced/styles/14-style.css
@@ -46,7 +46,7 @@ h6 {
   font-family: var(--font-family-title);
   font-weight: var(--font-weight-bold);
 }
-a[href^="http"] {
+a:link {
   color: var(--text-color);
   text-decoration: none;
 }
