--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -25,7 +25,7 @@
   --section-title-color: var(--color-black);
 }
 
-*, *::before, *::after {
+* {
   box-sizing: border-box;
 }
 
@@ -50,7 +50,7 @@ h6 {
   font-family: var(--font-family-title);
   font-weight: var(--font-weight-bold);
 }
-a[href^="http"] {
+a:link {
   color: var(--text-color);
   text-decoration: none;
 }
