--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -25,8 +25,11 @@
   --section-title-color: var(--color-black);
 }
 
-html {
+*, *:before, *:after {
   box-sizing: border-box;
+}
+
+html {
   scroll-behavior: smooth;
   font-size: 62.5%;
 }
