--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -99,7 +99,7 @@ a:active {
   text-align: center;
 }
 
-.nav-item {
+.nav .nav-item {
   font-family: var(--nav-item-font-family);
   font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
@@ -108,12 +108,12 @@ a:active {
   margin: var(--nav-item-margin);
 }
 
-.nav-link {
+.nav .nav-link {
   display: block;
   padding: .5rem 1rem;
 }
 
-.nav-link:hover {
+.nav .nav-link:hover {
   color: var(--nav-item-link-hover);
 }
 
@@ -152,7 +152,8 @@ a:active {
 
 .container {
   width: 960px;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .footer {
