--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -183,7 +183,7 @@ ul.row {
   margin-left: auto;
 }
 
-[data-section-theme=“dark”] {
+[data-section-theme="dark"] {
   --text-color: var(--color-white);
   --section-title-color: var(--color-white);
   background: var(--color-black);
