--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -328,7 +328,7 @@ ul.row {
   height: 30rem;
   width: 100%;
   object-fit: cover;
-  vertical-align: 0;
+  vertical-align: bottom;
 }
 
 .card-work .card-inner {
