--- a/0x02-CSS_advanced/styles/31-style.css
+++ b/0x02-CSS_advanced/styles/31-style.css
@@ -371,7 +371,7 @@ ul.row {
 }
 
 .card-testimonial .card-quote {
-  position: absolute;
+  position: relative;
 }
 
 .card-testimonial .card-quote::before {
