--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -316,7 +316,7 @@ ul.row {
   background-color: var(--color-white);
   width: 0;
   height: 0.2rem;
-  transition: var(--transition-cubic-bezier) var(--transition-duration);
+  transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .nav .nav-item:hover > .nav-link::before {
@@ -342,7 +342,7 @@ ul.row {
   left: -0.1rem;
   right: -0.1rem;
   z-index: 1;
-  transition: var(--transition-cubic-bezier) var(--transition-duration);
+  transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-inner {
@@ -392,7 +392,7 @@ ul.row {
 
 .card-work:hover .card-image {
   transform: scale(1.2);
-  transition: var(--transition-cubic-bezier) var(--transition-duration);
+  transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-outer {
