--- a/0x03-sass_scss/103-sort_strings.scss
+++ b/0x03-sass_scss/103-sort_strings.scss
@@ -2,6 +2,8 @@
 @import '103-sort_list';
 $order: a b c d e f g h i j k l m n o p q r s t u v w x y z;
 @function str-compare($a, $b, $order) {
+  $a: to-lower-case($a);
+  $b: to-lower-case($b);
   @for $i from 1 through min(str-length($a), str-length($b)) {
     $char-a: str-slice($a, $i, $i);
     $char-b: str-slice($b, $i, $i);
@@ -23,9 +25,9 @@ $order: a b c d e f g h i j k l m n o p q r s t u v w x y z;
     @each $item in $list {
       @if $item == $seed {
         $equal: append($equal, $item, list-separator($list));
-      } @else if _str-compare($item, $seed, $order) {
+      } @else if str-compare($item, $seed, $order) {
         $less: append($less, $item, list-separator($list));
-      } @else if not _str-compare($item, $seed, $order) {
+      } @else if not str-compare($item, $seed, $order) {
         $large: append($large, $item, list-separator($list));
       }
     }
