--- a/0x05-form/07-styles.css
+++ b/0x05-form/07-styles.css
@@ -800,10 +800,11 @@ input:required:valid:not(:placeholder-shown),
 textarea:valid:not(:placeholder-shown) {
   border: 0.1rem solid var(--valid-color);
 }
+
 /*** SEARCH FORM ***/
 .form-search {
   display: block;
-  padding: 0.5rem 0;
+  padding: .5rem 0;
   position: relative;
 }
 
@@ -841,7 +842,7 @@ textarea:valid:not(:placeholder-shown) {
   position: relative;
   width: 15rem;
   z-index: 1;
-  border-bottom: 0.1rem solid var(--color-grey);
+  border-bottom: .1rem solid var(--color-grey);
   padding: 0;
   cursor: text;
   margin: 0 1rem;
